Configure filter by release year and clean up.

--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  
+  <meta charset="utf-8">
+  <title>Sorry, guvnor. We cannot find the page!</title>
+
+  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <!-- Le fav and touch icons -->
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+  
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -14,13 +28,15 @@
     }
     h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
+  
 </head>
 
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Oh, no. This is embarrassing. We cannot find the page you are looking for.</h1>
+    <p>You may have mistyped the address or the page may have moved.  If you think we made an error, call me maybe.</p>
+    <p>Might want to try to return the way you came or <a href="/">head back to start</a>.  Your choice.</p>
   </div>
 </body>
 </html>
